src/objects/Oracle_Expenditure_Types__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditure_Category__c</fullName>
        <label>Expenditure Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rollup_Type_1__c</fullName>
        <label>Resource Rollup Type Lvl 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Type_2__c</fullName>
        <label>Resource Rollup Type Lvl 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>Unit Of Measure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Oracle Expenditure Types</label>
</CustomObject>